# cocohub-main

./: .detoxrc.js  App.tsx  AppDelegate.swift  CONTRIBUTING.md  ComplicationController.swift  ContentView.swift  InterfaceController.swift  PetData.swift  README.md  SharedData.swift  WatchApp.swift  WatchConnectivityManager.swift  app.config.js  expoSosLockScreenPlugin.js  fix.py  output.txt  package-lock.json  package.json  tsconfig.json  wearableService.ts
.github/workflows/: e2e-detox.yml  security-audit.yml
.maestro/scripts/: clearEmergencyContacts.js
backend/controllers/: telemedicineController.ts
backend/models/: Appointment.ts
backend/server/: app.ts  index.ts  store.ts
backend/services/: insuranceService.ts  mlPredictionService.ts  reportService.ts  stellarService.ts  symptomCheckerService.ts  wearableService.ts  webrtcService.ts
backend/src/: app.ts
contracts/medical-record-registry/: Cargo.toml  README.md
contracts/medical-record-registry/src/: lib.rs
contracts/pet-record-registry/: Cargo.toml  README.md
contracts/pet-registry/: Cargo.toml
docs/: BACKEND-SETUP.md  STELLAR-SETUP.md
e2e/: jest-config.js  medication.test.ts  medicationFlow.test.ts  medicationManagement.e2e.js  qrScanFlow.test.ts  qrShareFlow.test.ts  setup.js
ios-watch/: README.md
ios-widget/: CocohubWidgetModule.m  PetChainWidget.swift  PetChainWidgetModule.swift
pet_record_registry/: Cargo.toml
plugins/: withAndroidLockScreen.js
scripts/: check-translations.ts
src/: ExampleComponent.stories.tsx  ExampleComponent.tsx  i18n.js
test/: e2e.test.ts
(+205 files in other folders)
